Added test for role priority and workflow definition